2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure:
	* configure.in: Update version number from 5.1.2
	to 5.1.4.

2002-04-09  Mo DeJong  <mdejong@users.sourceforge.net>

	Added SN-513-2003-04-09 tag for 5.1.3 release.

2003-04-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/projmng.tcl (sn_new_project_cb): Don't delete
	a project file that was created in batch mode. The
	sn_create_new_project proc returns zero on a
	normal exit when in batch mode, so we were deleting
	the project file just after it had been created.
	[Bug 656067]

2003-04-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* patches/tk_altkey.patch: Add fix for keyboard
	shortcut bug in the Windows port of Tk.

2003-04-02  Steven Johnson  <sjohnson@neurizon.net>

	* gui/tree.tcl (sort_refresh): Added this new method,
	to allow the sort order of a list to be reset,
	after changes may have been made to the list contents.
	* gui/retrieverpane.tcl (start_search): Called new
	sort_refresh method after symbol tree is regenerated
	(following a file save). This restores the sort
	order that was selected prior to the save.

2003-04-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* patches/tix_sam.patch: Add patch to fix Tix
	install time problem with sam lib.

2003-03-30  Steven Johnson  <sjohnson@neurizon.net>

	*  gui/editorpane.tcl (Update_Layout): Set the cursor
	color to be the same as the default text foregorund
	color, so that the cursor is visible when the background
	color is changed to black (the default color).

2003-03-30  Roberto Yazon  <ryazonjr@cox.net>

	* gui/editorpane.tcl (InsertTab, Newline):
	Insert only the right amount of spaces to move cursor
	to next tab column. Read the edit-tabstop property
	to determine the equivalent number of spaces for a tab.

2003-03-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/sninit.tcl (sn_tcl_tk_init): Fix prepend
	of SN bin dir to the PATH env var on startup.
	The previous code used : as the PATH separator