@@ -1,5 +1,15 @@
 2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>
 
+	* gui/tmeter.tcl (make_scale_window): Add
+	a call to sn_wait so that we sit in the
+	event loop for a little bit after the scale
+	window is mapped. This is needed to work around
+	a problem under win32 where the scale window
+	is mapped but the contents are not drawn for
+	a couple of seconds.
+
+2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>
+
 	* configure:
 	* configure.in: Update version number from 5.1.2
 	to 5.1.4.
